--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 15px 0 5px 0;
+    margin: 15px 5% 5px 5%;
      
 }
 
